# KMIbot

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  pyproject.toml  transform.py
model/finetuned_model/: all_results.json  config.json  eval_results.json  spiece.model  tokenizer_config.json  train_results.json  trainer_state.json
